--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab01"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name="pl.wsei.pam.lab01.Lab01Activity"-->
+<!--            android:exported="false" />-->
         <activity
-            android:name="pl.wsei.pam.lab01.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
