--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab01"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name="pl.wsei.pam.lab01.Lab01Activity"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name="pl.wsei.pam.lab01.Lab01Activity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
