--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Lab01"
         tools:targetApi="31">
         <activity
+            android:name="pl.wsei.pam.lab06.Lab06Activity"
+            android:exported="false" />
+        <activity
             android:name="pl.wsei.pam.lab03.Lab03Activity"
             android:exported="false" />
         <activity
@@ -21,12 +24,12 @@
         <activity
             android:name=".Lab01Activity"
             android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
